5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1785_1594.log
== TEST (2019-05-30 11:11:54) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:00) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:25) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
print(size(dt)
-- ERROR:
File "XXXX", line 15
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:34) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
print(size(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:42) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dano = 0
peso = 1
# Laço
while (i<size(dano)):
	dano = dano * peso
	peso = peso + 1
	i = i + 1
	
print(size(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:00) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dano = 0
peso = 1
# Laço
while (i<size(dano)):
	dano = dano * peso
	peso = peso + 1
	i = i + 1
	
print(size(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:16) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dano = 0
peso = 1
# Laço
while (i<size(dano)):
	dano = dano * peso
	peso = peso + 1
	i = i + 1
	
print(size(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:54) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
	
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:02) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
	
print(size(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:25) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
	
print(size(dt[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:20:28) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dt = dano * peso
	peso = peso + 1
	i = i + 1
	
print(arrange(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:13) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
dt = 0
peso = 1
# Laço
while (i<size(dano)):
	dano[0] = dano
	
print(dano[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:54) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
coontador = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(size(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:26) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(size(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:35:39) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(size(dt))
-- EXECUTION TIME:
0.396497
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
3
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
5
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:56) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:36:42) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(dt)
-- EXECUTION TIME:
0.60357
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
[ 5  0 15]
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
[27 18  9 45 27]
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
[6 9]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:42) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
			
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:23) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso + 1))
	i = i + 1
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:36) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	peso = peso + 1
	if (i == 0):
		dt = dt + (dano * peso)
	elif (i > 0):
		dt = dt + (dano * (peso))
	i = i + 1
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:55) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	peso = peso + 1
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso)
# Saida
print(sum(dt))
-- ERROR:
File "XXXX", line 18
    print(sum(dt))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:29) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:55) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano[i] * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano[i] * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:14) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:43:24) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- EXECUTION TIME:
0.445461
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
40
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
294
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:35) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:36) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))2
-- ERROR:
File "XXXX", line 20
    print(sum(dt))2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:38) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:52) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:03) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:05) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:11) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	peso = peso + 1
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:59) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:12) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:14) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:16) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	
	i = i + 1
	
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:44) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:46) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1,
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:50) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:53) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso + 1))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:13) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso + i))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:53) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
		if (i > 0):
			dt = dt + (dano * (peso))
# Saida
print(sum(dt))
-- ERROR:
File "XXXX", line 14
    if (i > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:19) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:23) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * (peso))
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:41) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i > 0):
		dt = dt + (dano * peso)
# Saida
print(sume(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:28) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	if (i != 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:57) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1
	if (i != 0):
		dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:35) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:47) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:55) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:01) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:07) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:11) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:51:16) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i != 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- EXECUTION TIME:
0.525325
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
70
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:43) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1

if (i != 0):
	dt = dt + (dano * peso + i)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:51) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1

if (i != 0):
	dt = dt + (dano * peso + i)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:51:55) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1

if (i != 0):
	dt = dt + (dano * peso + i)
# Saida
print(sum(dt))
-- EXECUTION TIME:
0.292425
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
9
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
25
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:05) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1

if (i > 0):
	dt = dt + (dano * peso + i)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:24) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	

if (i > 0):
	dt = dt + (dano * peso + 1)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:36) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:53:46) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- EXECUTION TIME:
0.369745
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
20
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
98
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:51) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 1
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:07) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:12) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:19) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:49) 
-- CODE:
# Modulo numpy
from numpy import *
# Entrda
dano = array(eval(input("Determine os danos: ")))
# Variavel
i = 0
peso = 0
dt = 0
# Laço
while (i<size(dano)):
	if (i == 0):
		dt = dt + (dano * peso)
	i = i + 1
	peso = peso + 1

if (i > 0):
	dt = dt + (dano * peso)
# Saida
print(sum(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
